Indexing integration
Co-authored-by: Arpit Bandejiya <abandeji@amazon.com>

Signed-off-by: bharath-techie <bharath78910@gmail.com>